# grbl_turn

./: .gitignore  README.org  README_more.org  install-pi-lite.sh  install-pi.sh  install-ubuntu.sh  install-win.bat  packaging-notes.txt  pyproject.toml  uninstall-win.bat
attic/: README.org~  ext_thread2_dim.svg.BAK  eznc.ui  make_icons.py  notes.org
attic/ext_thread/: et.py  ext_thread.ui  foo.py
grbl_turn/: __init__.py  __main__.py  app.py  config.py  gcode.py  machine.py  units.py
grbl_turn/comms/: grbl.py  simulator.py  transport.py
grbl_turn/ops/: __init__.py  base.py  boring.py  facing.py  parting.py  passes.py  taper.py  threading_op.py  turning.py
grbl_turn/resources/icons/: grbl_turn.icns
grbl_turn/ui/: connect_widgets.py  main_window.py  numpad.py  op_dialog.py  op_page.py  path_view.py  run_dialog.py  run_page.py  theme.py  widgets.py
tests/: test_gcode_ops.py  test_passes.py  test_path_view.py  test_streaming.py  test_units_convert.py
