[project]
name = "grbl-turn"
version = "0.1.0"
description = "Conversational lathe GUI for ESP32 GRBL controllers"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
grbl-turn = "grbl_turn.app:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grbl_turn*"]

[tool.setuptools.package-data]
"grbl_turn.resources" = ["images/*.svg", "icons/*"]
